feat: add spotless linting